--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -223,7 +223,7 @@
 
                 $.ajax({
                     type: "POST",
-                    url: "https://localhost:5001/api/RodoCop",
+                    url: "https://a2klab.azurewebsites.net/api/RodoCop",
                     contentType: false,
                     processData: false,
                     data: data,
