--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -30,7 +30,7 @@
         <form method="post" enctype="multipart/form-data">
             <main role="main" class="inner cover">
                 <h1 class="cover-heading">Hola amigo</h1>
-                <p class="lead">Este servicio nos facilita realizar las acciones burocraticas impuestas por Rodo, el policia mas malvado de Oracle City; Mete el numero de ticket, subi los scripts y dale al Botonaso.</p>
+                <p class="lead">Este servicio nos facilita realizar las acciones burocraticas impuestas por Rodo, el policia mas malvado de Oracle City; Mete el numero de ticket, subi los scripts y dale a deploy.</p>
                 <p class="lead"></p>
 
                 <div class="container">
