--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -81,6 +81,7 @@
         {
             console.log("pase");
             document.getElementById('btnDeploy').innerHTML = '<a  class="btn btn-lg btn-secondary"> <img style="width: 25px;" src="/imgs/loading.gif" /> </a>'; 
+            clickDeploy();
         }
 
         $(document).ready(function () {
@@ -243,6 +244,42 @@
                 });
             }
         });
+
+    function clickDeploy(){
+        
+        $.ajax({  
+            type: "GET",  
+            url: "https://a2klab.azurewebsites.net/api/RodoCop/" + $("#ticket").val(),  
+            contentType: "application/json; charset=utf-8",  
+            dataType: "json",  
+            success: function (data) {  
+                alert(JSON.stringify(data));                  
+                $("#DIV").html('');   
+                var DIV = '';  
+                // $.each(data, function (i, item) {  
+                //     var rows = "<tr>" +  
+                //         "<td id='RegdNo'>" + item.regNo + "</td>" +  
+                //         "<td id='Name'>" + item.name + "</td>" +  
+                //         "<td id='Address'>" + item.address + "</td>" +  
+                //         "<td id='PhoneNo'>" + item.phoneNo + "</td>" +  
+                //         "<td id='AdmissionDate'>" + Date(item.admissionDate,  
+                //          "dd-MM-yyyy") + "</td>" +  
+                //         "</tr>";  
+                //     $('#Table').append(rows);  
+                // }); //End of foreach Loop   
+                console.log(data);  
+            }, //End of AJAX Success function  
+  
+            failure: function (data) {  
+                alert(data.responseText);  
+            }, //End of AJAX failure function  
+            error: function (data) {  
+                alert(data.responseText);  
+            } //End of AJAX error function  
+  
+        });
+
+    }
 
 
     </script>
