MOD: default index

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -99,9 +99,9 @@
 
     <script>
         /* Prod */
-        var urlService = "https://a2klab.azurewebsites.net";
+        //var urlService = "https://a2klab.azurewebsites.net";
         /* Dev */
-        //var urlService = "https://localhost:5001";
+        var urlService = "https://localhost:5001";
 
         function hideAlert()
         {
