--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -21,6 +21,7 @@
                 <h3 class="masthead-brand" onclick="rodokiller();">Rodocop</h3>
                 <nav class="nav nav-masthead justify-content-center">
                 <a class="nav-link active" href="index.html">Home</a>
+                <a class="nav-link" href="/mirtha/index.html">Mirtha</a>
                 <a class="nav-link" href="https://a2klab.azurewebsites.net/">a2kLab</a>
                 </nav>
             </div>
@@ -164,9 +165,9 @@
         }
 
         /* Prod */
-        var urlService = "https://a2klab.azurewebsites.net";
+        //var urlService = "https://a2klab.azurewebsites.net";
         /* Dev */
-        //var urlService = "https://localhost:5001";
+        var urlService = "https://localhost:5001";
 
         function hideAlert()
         {
