--- a/wwwroot/mirtha/index.html
+++ b/wwwroot/mirtha/index.html
@@ -225,8 +225,7 @@
 		xhr.setRequestHeader("Access-Control-Allow-Credentials", "true");
     	xhr.setRequestHeader("Access-Control-Allow-Methods", "GET,HEAD,OPTIONS,POST,PUT");
     	xhr.setRequestHeader("Access-Control-Allow-Headers", "Access-Control-Allow-Headers, Origin,Accept, X-Requested-With, Content-Type, Access-Control-Request-Method, Access-Control-Request-Headers");
-		xhr.setRequestHeader('key', 'ZDNhpjQEXca52NYZUsSVjnDkmYjkTcdl');
-		//xhr.setRequestHeader('key', 'D8EMcmabT+P6Ir9U+JQl/vDKQ3bcc8ag');
+		xhr.setRequestHeader('key', 'xx');
 	}
 
 	function vuelos(v_iata, v_flight)
