--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -165,9 +165,9 @@
         }
 
         /* Prod */
-        //var urlService = "https://a2klab.azurewebsites.net";
+        var urlService = "https://a2klab.azurewebsites.net";
         /* Dev */
-        var urlService = "https://localhost:5001";
+        //var urlService = "https://localhost:5001";
 
         function hideAlert()
         {
