--- a/wwwroot/snap.html
+++ b/wwwroot/snap.html
@@ -20,8 +20,22 @@
             <div class="inner">
                 <h3 class="masthead-brand">#Snap</h3>
                 <nav class="nav nav-masthead justify-content-center">
-                <a class="nav-link" href="snaphow.html">snapShow</a>
-                <a class="nav-link" href="https://a2klab.azurewebsites.net/">a2kLab</a>
+                    <a class="nav-link" href="index.html">Home</a>
+                    <a class="nav-link" href="#"></a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Labs
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="/mirtha">Mirtha</a>
+                            <a class="dropdown-item" href="/maps">Maps</a>
+                            <a class="dropdown-item" href="/snap.html">Snap</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="https://spotypub.azurewebsites.net">Spotypub</a>
+                        </div>
+                    </li>
+                    <a class="nav-link" href="#"></a>
+                    <a class="nav-link" href="https://a2klab.azurewebsites.net/">a2kLab</a>
                 </nav>
             </div>
         </header>
