--- a/wwwroot/snap.html
+++ b/wwwroot/snap.html
@@ -30,6 +30,7 @@
                             <a class="dropdown-item" href="/mirtha">Mirtha</a>
                             <a class="dropdown-item" href="/maps">Maps</a>
                             <a class="dropdown-item" href="/snap.html">Snap</a>
+                            <a class="dropdown-item" href="/a2kbus">A2Kbus</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="https://spotypub.azurewebsites.net">Spotypub</a>
                         </div>
