--- a/wwwroot/a2kbus/index.html
+++ b/wwwroot/a2kbus/index.html
@@ -80,7 +80,7 @@
 
     var settings = {
 
-        "url": "http://api.aa2000.com.ar/api/LongStay/1",
+        "url": "https://api.aa2000.com.ar/api/LongStay/1",
 
         "method": "GET",
 
